--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,19 @@ python = "^3.8"
 fastapi = "^0.55.1"
 uvicorn = "^0.11.5"
 dataset = "^1.3.1"
+dynaconf = "^2.2.3"
+databases = {version = "^0.3.2", extras = ["sqlite"]}
+alembic = "^1.4.2"
+pydantic = {version = "^1.5.1", extras = ["email"]}
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+mypy = "^0.770"
+isort = "^4.3.21"
+black = "^19.10b0"
+flake8 = "^3.8.2"
+pytest-cov = "^2.9.0"
+pre-commit = "^2.4.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
