--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ flake8 = "^3.8.2"
 pytest-cov = "^2.9.0"
 pre-commit = "^2.4.0"
 
+[tool.poetry.scripts]
+load-movies = 'matchflix.cli.load_movies:main'
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
