--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,14 +9,15 @@ python = "^3.8"
 fastapi = "^0.55.1"
 uvicorn = "^0.11.5"
 dataset = "^1.3.1"
+databases = {version = "^0.3.2", extras = ["sqlite"]}
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 
+[tool.poetry.scripts]
+load-movies = "matchflix.cli.load_movies:main"
+create-db = "matchflix.cli.create_db:main"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
 
-[tool.poetry.scripts]
-load-movies = "matchflix.cli.load_movies:main"
-create-db = "matchflix.cli.create_db:main"
