--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ uvicorn = "^0.11.5"
 dataset = "^1.3.1"
 databases = {version = "^0.3.2", extras = ["sqlite"]}
 dynaconf = "^2.2.3"
+requests = "^2.23.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
