--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,9 @@ python = "^3.8"
 fastapi = "^0.55.1"
 uvicorn = "^0.11.5"
 dataset = "^1.3.1"
-databases = {version = "^0.3.2", extras = ["sqlite"]}
 dynaconf = "^2.2.3"
 requests = "^2.23.0"
+databases = {version = "^0.3.2", extras = ["postgresql"]}
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
