--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dataset = "^1.3.1"
 dynaconf = "^2.2.3"
 requests = "^2.23.0"
 databases = {version = "^0.3.2", extras = ["postgresql"]}
+aiosqlite = "^0.13.0"
+asyncpg = "^0.20.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
